<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    tools:context=".ui.account.login.LoginFragment">

    <TextView
        android:id="@+id/tv_title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textColor="@color/on_background_text"
        android:textSize="@dimen/title_text_size" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_login_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clipToPadding="false"
        android:hint="@string/hint_login"
        android:padding="0dp"
        app:boxCornerRadiusBottomEnd="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/input_layout_corner_radius"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <EditText
            android:id="@+id/et_login_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:fontFamily="@font/inter_medium"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hint_password"
        app:boxCornerRadiusBottomEnd="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/input_layout_corner_radius"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:autofillHints=""
            android:inputType="numberPassword"
            tools:ignore="LabelFor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/text_marked_notice"
        android:textColor="@color/gray_text"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/text_didnt_have_account"
            android:textColor="@color/gray_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_to_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/title_registration"
            android:textColor="@color/primary"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_bold"
        android:paddingLeft="70dp"
        android:paddingTop="10dp"
        android:paddingRight="70dp"
        android:paddingBottom="10dp"
        android:text="@string/text_login"
        android:textColor="@color/btn_text"
        app:cornerRadius="@dimen/btn_corner_radius" />
</LinearLayout>