<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.find_activity.FindActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/inter_semi_bold"
            android:gravity="center_vertical"
            android:text="@string/title_activity_type"
            android:textColor="@color/on_background_text"
            android:textSize="@dimen/title_text_size" />

        <Spinner
            android:id="@+id/sp_activity_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:spinnerMode="dropdown"
            tools:listitem="@layout/item_activity_type" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_find_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:enabled="true"
                android:fontFamily="@font/inter_bold"
                android:text="@string/text_find_activity"
                android:textColor="@color/btn_text"
                app:cornerRadius="@dimen/btn_corner_radius"
                tools:ignore="ButtonStyle" />

            <ProgressBar
                android:id="@+id/pb_activity"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/text_settings"
            android:textColor="@color/btn_text"
            app:cornerRadius="@dimen/btn_corner_radius"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_activities"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <CheckBox
        android:id="@+id/cb_only_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/text_only_favourite"
        android:textSize="20sp" />


</LinearLayout>